--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-Hello World
+<html>
+<head>
+<title>Nick Sanders</title>
+</head>
+<body>
+
+<h1>
+Heading
+</h1>
+
+<p>
+Paragraph
+</p>
+
+</body>
+</html>
