--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 <body>
 
 <h1>
-Heading
+Nick Sanders' Personal Site
 </h1>
 
 <p>
-Paragraph
+This page will serve as a personal/professional site for Nick Sanders. This page is under constructions, stay tuned.
 </p>
 
 </body>
